# tilemapedit3d

./: .gitignore  ASSET_USAGE.txt  Cargo.toml  LICENSE.txt  README.md  map.json
assets/shaders/: terrain_pbr_extension.wgsl
assets/textures/terrain/: rocky_terrain_02_nor_gl_1k_fixed.exr  rocky_terrain_02_rough_1k_fixed.exr  rocky_terrain_02_rough_1k_fixed_rgb.exr
assets/textures/terrain/rock/: aerial_ground_rock_nor_gl_1k_fixed.exr
src/: camera.rs  controls.rs  editor.rs  export.rs  grid_visual.rs  io.rs  main.rs  runtime.rs  terrain.rs  types.rs  ui.rs
src/debug/asset/: image_inspector.rs  mod.rs
src/texture/: material.rs  mod.rs  registry.rs
